syntax = "proto3";

package pcbook;
option go_package = "./pb";

import "proto/memory_message.proto";


message Filter {
    double max_price = 1;
    uint32 min_cores = 2;
    double min_ghz = 3;
    Memory min_ram = 4;
}